<resources>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="btn_call">呼叫</string>
    <string name="btn_save">保存</string>
    <string name="day">日</string>
    <string name="qrcode_btn_click_txt">输入数字码</string>
    <string name="qrcode_code_title_txt">我的二维码</string>
    <string name="qrcode_code_txt">QRCODE</string>
    <string name="empty_hint3">暂无%s数据</string>
    <string name="btn_send_space">发 送</string>
    <string name="required_filed">*</string>
    <string name="btn_delete">删除</string>
    <string name="btn_close">关闭</string>
    <string name="app_name">月亮天使</string>
    <string name="test_name">(%s)测试</string>
    <string name="none">无</string>
    <string name="none2">暂无</string>
    <string name="start_error">启动异常</string>
    <string name="order_refresh">重新加载</string>
    <string name="order_null_content">加载失败，请检查您当前的网络环境</string>
    <string name="more_amount">99+</string>
    <string name="main_tab_no_data">此功能需要更新版本才能使用！</string>
    <string name="refreshing">努力加载中！</string>
    <string name="scan_fail">无效二维码，请重新扫描</string>
    <string name="week">星期</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期天</string>
    <string name="main_tab_qrcode">我的二维码</string>
    <string name="main_tab_card">打卡</string>
    <string name="main_menu_title">菜单</string>
    <string name="btn_ok_with_space">确 定</string>
    <string name="btn_ok2_with_space">确 认</string>
    <string name="btn_ok3">确认</string>
    <string name="btn_cancel_with_space">取 消</string>
    <string name="btn_save_with_space">保 存</string>
    <string name="btn_select_all">全选</string>
    <string name="ticket_type_ticket">门票</string>
    <string name="ticket_type_moonfriend">月亮之友</string>
    <string name="ticket_type_moonangel">月亮天使</string>
    <string name="ticket_type_emp">员工</string>
    <string name="ticket_check_btn_text">开始检票</string>
    <string name="ticket_code_btn_text">输入编码检票</string>
    <string name="ticket_scan_btn_text">扫描二维码检票</string>
    <string name="ticket_submit_btn_text">确 定</string>
    <string name="ticket_edit_hint">请输入编码</string>
    <string name="ticket_edit_text_empty">验票码不能为空</string>
    <string name="ticket_appointment_msg">预约信息</string>
    <string name="ticket_enter">进场</string>
    <string name="ticket_no_enter">不进场</string>
    <string name="ticket_check_success">入场成功</string>
    <string name="ticket_times_title">场次选择</string>
    <string name="ticket_venue_title">场馆选择</string>
    <string name="ticket_choose_title">洗涤科技馆选择</string>
    <string name="ticket_check_title">洗涤科技馆检票</string>
    <string name="ticket_get_data_fail">获取场次数据超时，请重试</string>
    <string name="ticket_count_address">场馆：</string>
    <string name="ticket_count_time">场次：</string>
    <string name="ticket_code_content">可输入门票编码、合作伙伴编码\n员工编码、手机号</string>
    <string name="tab_orders">待接单</string>
    <string name="tab_appointment">待预约</string>
    <string name="tab_delivery">待送货</string>
    <string name="tab_receipt">待签收</string>
    <string name="tab_history">历史单</string>
    <string name="tab_detail">订单详情</string>
    <string name="tips">提示：</string>
    <string name="clear_dialog_msg">确定要清除应用缓存？</string>
    <string name="clear_cache_success">清除成功！</string>
    <string name="no_cache">没有可清除的缓存！</string>
    <string name="change_pwd_success">修改成功！</string>
    <string name="data_loading">加载中&#8230;</string>
    <string name="token_out">登录过期，请重新登录</string>
    <string name="new_version_alert_no_update">当前已是最新版本！</string>
    <string name="new_version_updating">正在更新</string>
    <string name="new_version_yes">立即更新</string>
    <string name="new_version_no">稍后再说</string>
    <string name="new_version_error">更新出现异常！</string>
    <string name="btn_submit">提交</string>
    <string name="btn_submit_space">提&#160;交</string>
    <string name="btn_submit_sure">确定提交</string>
    <string name="btn_later">稍后</string>
    <string name="btn_setting">设置</string>
    <string name="btn_search">搜索</string>
    <string name="btn_reset_confirm">确定今天休息么？</string>
    <string name="request_server_busy">服务器繁忙，请稍后再试</string>
    <string name="request_server_overtime">连接不上服务器，请检查网络再试</string>
    <string name="login_name">账号</string>
    <string name="login_name_hint">请输入账号</string>
    <string name="login_name_empty">员工编号不能为空！</string>
    <string name="login_password">密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_text">登 录</string>
    <string name="login_submit">提 交</string>
    <string name="login_phone">手机验证</string>
    <string name="login_new_psw">新密码</string>
    <string name="login_new_psw_hint">请输入新密码</string>
    <string name="login_new_psw_hint2">请再次输入新密码</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_phone_right">请输入正确的手机号码</string>
    <string name="login_get_code">获取验证码</string>
    <string name="login_code_hint">请输入验证码</string>
    <string name="login_check_again">重新验证</string>
    <string name="login_get_code_again">重新获取(%s)</string>
    <string name="login_right_code_hint">请输入正确验证码！</string>
    <string name="login_old_psw">原密码</string>
    <string name="login_old_psw_hint">请输入原密码</string>
    <string name="login_old_psw_empty">原密码不能为空</string>
    <string name="login_new_psw_empty">新密码不能为空</string>
    <string name="login_same_psw">请确认新密码与确认密码要一致！</string>
    <string name="login_not_empty">请确认输入内容不能为空！</string>
    <string name="login_reset_success">密码重置成功</string>
    <string name="user_settings">设置</string>
    <string name="user_general">通用</string>
    <string name="service_dialog_title">客服联系方式</string>
    <string name="service_dialog_title2">联系客服</string>
    <string name="service_call2">拨打客服电话\n400-111-1118转5</string>
    <string name="service_call">1.拨打客服电话400-111-1118转5</string>
    <string name="service_weixin">2.关注微信公众号“蓝月亮的世界”进行在线咨询</string>
    <string name="service_weixin_btn">前往微信咨询</string>
    <string name="service_call_btn">拨打客服电话</string>
    <string name="no_weixin">没有找到微信，请安装后再试！</string>
    <string name="user_about">关于月亮天使</string>
    <string name="user_findpwd">找回密码</string>
    <string name="user_resetpwd">重置密码</string>
    <string name="user_change_pwd">修改密码</string>
    <string name="user_phone_hint">手机号码</string>
    <string name="user_clear_cache">清除缓存</string>
    <string name="user_check_version">检测新版本</string>
    <string name="cancel_account">退出登录</string>
    <string name="loginout_success">退出成功！</string>
    <string name="exit_app_dialog_msg">退出后，不会清除登录信息。确定要退出？</string>
    <string name="exit_app_msg">确定要退出月亮天使应用？</string>
    <string name="new_version_alert_title">升级提示</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="ok">确&#160;认</string>
    <string name="reset_get_code">获取验证码</string>
    <string name="reset_phone_code">手机验证码</string>
    <string name="cur_psw">当前密码</string>
    <string name="cur_psw_hint">请输入当前密码</string>
    <string name="cur_psw_fail">当前密码输入错误</string>
    <string name="new_psw">新密码</string>
    <string name="new_psw_hint">请输入8-18位数字+字母密码</string>
    <string name="new_psw_tips">请输入8-18位密码</string>
    <string name="confirm_psw">确认密码</string>
    <string name="confirm_psw_hint">请输入确认密码</string>
    <string name="reset_success">密码重置成功</string>
    <string name="register_right_code">请输入正确验证码！</string>
    <string name="register_not_empty">请确认输入内容不能为空！</string>
    <string name="register_right_pwd">请确认密码不能小于8位数！</string>
    <string name="register_same_pwd">请确认新密码与确认密码要一致！</string>
    <string name="register_get_phone_fail">没有获取到正确号码</string>
    <string name="register_check_again">重新验证</string>
    <string name="register_second">秒</string>
    <string name="reset_send_sms_success">验证码发送成功</string>
    <string name="reset_id_hint">请输入存货顾问/员工编号</string>
    <string name="reset_phone_hint">请输入手机号</string>
    <string name="reset_id_not_empty">存货顾问/员工编号不能为空</string>
    <string name="reset_phone_not_empty">手机号码不能为空</string>
    <string name="reset_check_phone">请输入正确的手机号码</string>
    <string name="reset_input_content">1、存货顾问请输入注册时手机号；\n2、员工请输入员工信息中的手机号；\n3、若忘记手机号，请联系客服。</string>
    <string name="pending_order_detail">订单详情</string>
    <string name="pending_order_detail_txt">详情</string>
    <string name="pending_order_pay_time">付款时间：%s</string>
    <string name="pending_order_subscribe_time">预约时间：%s</string>
    <string name="pending_order_address">详细地址：%s</string>
    <string name="pending_order_total_kinds">总类数：%d</string>
    <string name="pending_order_total_price">总价：%s</string>
    <string name="pending_order_get_null">当前无待接单</string>
    <string name="order_filter_name">收货人</string>
    <string name="please_select_txt">请选择</string>
    <string name="please_input_txt">请输入</string>
    <string name="people_flow_input">请填写</string>
    <string name="promote_none">无</string>
    <string name="total_money">总金额(元)</string>
    <string name="offline_student_info">学员信息</string>
    <string name="offline_course_detail_name">课程名称</string>
    <string name="offline_course_detail_state">课程状态</string>
    <string name="offline_course_detail_sign_time">签到时间</string>
    <string name="offline_course_detail_room">培训教室</string>
    <string name="offline_evaluate_time">培训时间</string>
    <string name="offline_evaluate_student">学员名称</string>
    <string name="offline_evaluate_content">评价内容</string>
    <string name="offline_evaluate_suggest">意见及建议</string>
    <string name="offline_teacher_evaluate_hint">写一下你对这位学员的评价吧！</string>
    <string name="btn_sign_blank">签 到</string>
    <string name="offline_evaluate_teacher_score_hint">填写分数，满分是100分哦！</string>
    <string name="offline_evaluate_score">分数</string>
    <string name="txt_phone">手机号</string>
    <string name="txt_self_contact">本人联系方式</string>
    <string name="txt_weichat">微信号</string>
    <string name="txt_emailPers">个人邮箱</string>
    <string name="txt_officePlace">办公点</string>
    <string name="txt_officePhone">办公分机号</string>
    <string name="txt_officeSeat">办公座位号</string>
    <string name="txt_relation">紧急联系人</string>
    <string name="txt_contactName_edit">联系人一(必填)</string>
    <string name="txt_contactRelation">关系</string>
    <string name="txt_contactName2_edit">联系人二(选填)</string>
    <string name="txt_inDate">入职时间</string>
    <string name="txt_educationHighest">学历</string>
    <string name="txt_gradSchool">学校</string>
    <string name="txt_major">专业</string>
    <string name="txt_blood">血型</string>
    <string name="txt_marriage">婚姻状况</string>
    <string name="txt_idcard_tyoe">户口性质</string>
    <string name="txt_idcard">身份证号</string>
    <string name="txt_bankNo">银行卡号</string>
    <string name="txt_emailComp">公司邮箱</string>
    <string name="txt_hkAddress">户口地址</string>
    <string name="txt_txAddress">通讯地址</string>
    <string name="txt_base_info_info">说明：\n如信息变更，请及时反馈对应人事伙伴提报共享中心人员修改。</string>
    <string name="txt_verify_code">验证码</string>
    <string name="offline_record_date">培训日期</string>
    <string name="mendian_name">门店名称</string>
    <string name="store">仓库名称</string>
    <string name="phone">联系电话</string>
    <string name="recommend_code">推荐人编码</string>
    <string name="recommend_name">推荐人姓名</string>
    <string name="group_buy_info">拼团信息(支)</string>
    <string name="unit_price">单价(元)</string>
    <string name="ptr_code">拼团人编码</string>
    <string name="ptr_name">拼团人姓名</string>
    <string name="mdzy">门店资源</string>
    <string name="mdxx">门店信息</string>
    <string name="has_mdxx">是否有门店资源</string>
    <string name="receive_address">收货地址</string>
    <string name="total_count_zhi_shu">总数(支)</string>
</resources>