<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg_f2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">
        <cn.com.bluemoon.delivery.ui.common.BmCellTextView
            android:id="@+id/view_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cell_text_txt_title="@string/offline_evaluate_student"
        />
        <cn.com.bluemoon.delivery.ui.common.BmCellTextView
            android:id="@+id/view_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cell_text_txt_title="@string/offline_course_detail_name"
        />

        <cn.com.bluemoon.delivery.ui.common.BmCellTextView
            android:id="@+id/view_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cell_text_txt_title="@string/offline_evaluate_time"
        />
        <cn.com.bluemoon.delivery.ui.common.BmCellTextView
            android:id="@+id/view_sign_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cell_text_txt_title="@string/offline_course_detail_sign_time"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="6dp"
            android:paddingLeft="12dp"
            android:background="@color/page_bg_f2"
            android:text="@string/offline_evaluate_content"
            android:textColor="@color/text_grep"
            android:textSize="@dimen/text_size_12"/>
        <cn.com.bluemoon.delivery.ui.common.BMFieldText1View
            android:id="@+id/view_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:field_text1_hint="@string/offline_evaluate_teacher_score_hint"
            app:field_text1_title="@string/offline_evaluate_score"/>
        <cn.com.bluemoon.delivery.ui.common.BMFieldParagraphView
            android:id="@+id/view_suggest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:field_content_maxLength="500"
            app:field_hint="@string/offline_teacher_evaluate_hint"
            app:field_title="@string/offline_evaluate_suggest"
        />

        <cn.com.bluemoon.delivery.ui.common.BMAngleBtn1View
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/page_bg_f2"
            app:btn_enable="false"
            app:btn_text="@string/btn_submit_space"
        />
    </LinearLayout>
</ScrollView>


